# flycast-dojo-mvc2

./: .gitlab-ci.yml  CMakeLists.txt  README.md
config/: emu.cfg
core/: emulator.cpp  emulator.h  nullDC.cpp  serialize.cpp  types.h
core/cfg/: cfg.cpp  cfg.h  option.cpp  option.h
core/cfg/config/: config.icc  config.ipp
core/hw/aica/: aica.cpp  aica.h  aica_if.cpp  aica_if.h  aica_mem.cpp  aica_mem.h  dsp.cpp  dsp.h  dsp_arm32.cpp  dsp_arm64.cpp  dsp_interp.cpp  dsp_x64.cpp  dsp_x86.cpp  sgc_if.cpp  sgc_if.h
core/hw/arm7/: arm7.h
core/hw/flashrom/: flashrom.cpp  flashrom.h
core/hw/holly/: sb_mem.cpp
core/hw/maple/: maple_cfg.cpp  maple_cfg.h  maple_devs.cpp  maple_devs.h  maple_helper.cpp  maple_helper.h  maple_if.cpp  maple_if.h  maple_jvs.cpp
core/hw/mem/: _vmem.cpp  mem_watch.h
core/hw/modem/: modem.cpp
core/hw/naomi/: naomi_cart.cpp  naomi_cart.h  naomi_flashrom.cpp  naomi_m3comm.cpp  naomi_roms.cpp  naomi_roms.h  naomi_roms_eeprom.h  naomi_roms_input.h
core/hw/pvr/: Renderer_if.cpp  Renderer_if.h  elan.cpp  elan.h  pvr.cpp  pvr_regs.h  ta.cpp  ta.h  ta_ctx.cpp  (+2 more)
core/input/: gamepad_device.cpp  gamepad_device.h  keyboard_device.h  mouse.cpp
core/linux/: common.cpp  posix_vmem.cpp
core/linux-dist/: main.cpp
core/log/: LogManager.cpp
core/netvs/: CMakeLists.txt  audio_dsp.cpp  audio_dsp.h  emulator.cpp  emulator.hpp  emulator_main.cpp  input_thread.cpp  ioapi.h  lowpass2.cpp  lowpass2.h  rijndael_alg_fst.cpp  rijndael_alg_fst.h  tchar.h  ticks.c  ticks.h  types.hpp
core/netvs/emulator/: hiscore.icc  hiscore.ipp  input.icc  input.ipp
core/netvs/netvs/: .gitignore  delay.h  netvs_common.h
core/network/: ggpo.cpp  ggpo.h  naomi_network.cpp  naomi_network.h
core/oslib/: audiostream.cpp  oslib.cpp
core/rec-ARM64/: rec_arm64.cpp
core/rend/: CustomTexture.cpp  CustomTexture.h  TexCache.h  imgui_driver.h  sorter.cpp
core/sdl/: sdl.cpp
core/wsi/: egl.cpp  gl_context.h  sdl.cpp  switcher.cpp
shell/android/: Android.cpp
shell/libretro/: libretro.cpp  option.cpp
(+9 files in other folders)
